# OpenOSINT

./: .env.example  .gitignore  CHANGELOG.md  CLOUD.md  CONTRIBUTING.md  DISCLAIMER.md  LICENSE  MarioRossi.txt  Procfile  README.md  SECURITY.md  SPONSORS.md  SPONSORSHIP.md  Tommaso Bertocchi.txt  Tommaso.Bertocchi.txt  TommasoBertocchi.txt  config.example.yaml  main.py  openosint.tape  pyproject.toml  requirements.txt  setup.sh  sponsors.json
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: config.yml  new_integration.yml
.github/cla/: signatures.json
.github/workflows/: ci.yml  publish-mcp-registry.yml  release.yml
_leadmagnet/: Makefile  capture-page-copy.md  free-prompts.html
cloud/: config.py  db.py  key_sources.py  main.py  polar.py
cloud/routes/: checkout_return.py  dashboard.py  enrich.py  mcp_gateway.py  oauth.py  webhook.py
core/: llm_client.py
db/: init.sql
docs/: docs.js  index.html  prompt-pack.html  script.js  sitemap.xml  sponsors.html  style.css
docs/acceptable-use/: index.html
docs/assets/: metrics.js
docs/blog/: ai-hallucination-osint.html  breach-check-open-source.html  claude-code-osint.html  email-osint-guide.html  google-dorks-guide.html  index.html  ip-intelligence-guide.html  (+16 more)
legal/: ACCEPTABLE_USE_POLICY.md  PRIVACY_POLICY.md  TERMS_OF_SERVICE.md
modules/: breach_check.py  domain_check.py  email_check.py  face_check.py  google_dork.py  ip_check.py  metadata_check.py  paste_check.py  phone_check.py  social_check.py  whois_check.py
openosint/: __init__.py  agent.py  brightdata.py  cli.py  config.py  display.py  dossier.py  main.py  mcp_http.py  mcp_server.py  pivot.py  proxy.py  repl.py  utils.py  web_server.py
tests/: test_cloud.py  test_cloud_mcp.py  test_dns.py  test_dossier.py  test_playbooks.py  test_proxy.py  test_tools.py  test_web_server.py
(+58 files in other folders)
