[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openosint"
version = "1.0.0"
description = "AI-powered OSINT agent for conversational intelligence gathering"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "OpenOSINT Contributors" }]
keywords = ["osint", "security", "intelligence", "ai", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "click>=8.1.0",
    "rich>=13.7.0",
    "requests>=2.31.0",
    "dnspython>=2.6.0",
    "python-whois>=0.9.0",
    "phonenumbers>=8.13.0",
    "Pillow>=10.4.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pytest-asyncio>=0.21.0", "black>=23.0.0", "ruff>=0.1.0"]

[project.scripts]
openosint = "openosint.cli:cli"

[project.urls]
Homepage = "https://github.com/openosint/openosint"
Documentation = "https://openosint.github.io"
Repository = "https://github.com/openosint/openosint"
Issues = "https://github.com/openosint/openosint/issues"

[tool.hatch.build.targets.wheel]
packages = ["openosint"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.black]
line-length = 100
target-version = ["py310"]
